@@ -11784,8 +11784,8 @@ class DBProxy(taskbuffer.OraDBProxy.DBProxy):
         tmpLog.debug('start')
         try:
             # sql to get tasks
-            sqlAV = "SELECT t.jediTaskID,t.status,t.splitRule,t.useJumbo,d.nEvents FROM {0}.JEDI_Tasks t,{0}.JEDI_Datasets d ".format(jedi_config.db.schemaJEDI)
-            sqlAV += "WHERE t.prodSourceLabel=:prodSourceLabel AND t.vo=:vo AND t.useJumbo IS NOT NULL AND t.useJumbo<>:useJumbo "
+            sqlAV = "SELECT t.jediTaskID,t.status,t.splitRule,t.useJumbo,d.nEvents,t.currentPriority FROM {0}.JEDI_Tasks t,{0}.JEDI_Datasets d ".format(jedi_config.db.schemaJEDI)
+            sqlAV += "WHERE t.prodSourceLabel=:prodSourceLabel AND t.vo=:vo AND t.useJumbo IS NOT NULL "
             sqlAV += "AND t.status IN (:s1,:s2,:s3,:s4,:s5) "
             sqlAV += "AND t.gshare NOT IN (:gs1) " 
             sqlAV += "AND d.jediTaskID=t.jediTaskID AND d.type IN ("
@@ -11820,7 +11820,6 @@ class DBProxy(taskbuffer.OraDBProxy.DBProxy):
             varMap[':s4'] = 'ready'
             varMap[':s5'] = 'scouted'
             varMap[':gs1'] = 'Validation'
-            varMap[':useJumbo'] = JediTaskSpec.enum_useJumbo['disabled']
             for tmpType in JediDatasetSpec.getInputTypes():
                 mapKey = ':type_'+tmpType
                 varMap[mapKey] = tmpType
@@ -11828,11 +11827,13 @@ class DBProxy(taskbuffer.OraDBProxy.DBProxy):
             resAV = self.cur.fetchall()
             tmpLog.debug('got tasks')
             tasksWithJumbo = dict()
-            for jediTaskID, taskStatus, splitRule, useJumbo, nEvents in resAV:
+            for jediTaskID, taskStatus, splitRule, useJumbo, nEvents, currentPriority in resAV:
                 tasksWithJumbo[jediTaskID] = dict()
                 taskData = tasksWithJumbo[jediTaskID]
                 taskData['taskStatus'] = taskStatus
                 taskData['nEvents'] = nEvents
+                taskData['useJumbo'] = useJumbo
+                taskData['currentPriority'] = currentPriority
                 taskSpec = JediTaskSpec()
                 taskSpec.useJumbo = useJumbo
                 taskSpec.splitRule = splitRule
